--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <svg width="60" height="60" viewBox="0 0 100 100" class="qyn-logo">
+                <svg width="60" height="60" viewBox="0 0 100 100">
                     <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="4" fill="none" class="glow"/>
                     <text x="50" y="60" font-family="Orbitron" font-size="60" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
                 </svg>
@@ -34,15 +34,15 @@
         <div class="quantum-grid"></div>
         <div class="particle-field"></div>
         <div class="container hero-content">
-            <svg width="300" height="300" viewBox="0 0 100 100" class="hero-logo-svg">
-                <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="4" fill="none" class="glow"/>
-                <text x="50" y="60" font-family="Orbitron" font-size="60" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
+            <svg width="280" height="280" viewBox="0 0 100 100" class="hero-logo">
+                <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="5" fill="none" class="glow"/>
+                <text x="50" y="62" font-family="Orbitron" font-size="58" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
             </svg>
             <h1>Qynetic Labs Oy</h1>
             <h2>Quantum Finance Infrastructure</h2>
             <p>Real quantum advantage for DeFi and institutions.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
             <div class="cta">
-                <a href="#whitepaper" class="btn-primary">Whitepaper</a>
+                <a href="qynetic-whitepaper-v1.3.pdf" class="btn-primary" download>Download Whitepaper</a>
                 <a href="mailto:hello@qynetic.com" class="btn-secondary">Join Alpha</a>
             </div>
         </div>
@@ -52,18 +52,19 @@
     <section id="problem" class="section">
         <div class="container">
             <h2>The Classical Limit</h2>
+            <p class="section-desc">Current systems cannot handle the scale of 2027–2030 finance markets.</p>
             <div class="cards">
                 <div class="card">
-                    <h3>Optimization</h3>
-                    <p>High-dimensional portfolios impossible in real time</p>
+                    <h3>Optimization Bottleneck</h3>
+                    <p>High-dimensional portfolios impossible in real time on classical hardware</p>
                 </div>
                 <div class="card">
-                    <h3>Risk Crisis</h3>
+                    <h3>Risk Computation Crisis</h3>
                     <p>Regulatory Monte-Carlo too slow at scale</p>
                 </div>
                 <div class="card">
-                    <h3>Inefficiency</h3>
-                    <p>Billions lost in suboptimal routing</p>
+                    <h3>Capital Inefficiency</h3>
+                    <p>Suboptimal routing wastes billions annually</p>
                 </div>
             </div>
         </div>
@@ -73,7 +74,7 @@
     <section id="solution" class="section alt">
         <div class="container">
             <h2>Qynetic Oracle</h2>
-            <p class="large">Production quantum financial layer on real hardware.<br>IBM Condor • Google Willow • Post-Quantum Secured</p>
+            <p class="large">Production quantum financial layer on real hardware.<br>IBM Condor • Google Willow • Post-Quantum Secured from day one</p>
         </div>
     </section>
 
@@ -82,10 +83,10 @@
         <div class="container">
             <h2>Core Technology</h2>
             <div class="tech-grid">
-                <div class="tech-card">QAOA & QAE</div>
-                <div class="tech-card">NIST PQC</div>
-                <div class="tech-card">Rust Engine</div>
-                <div class="tech-card">Proof-of-Useful-Quantum</div>
+                <div class="tech-card">QAOA & QAE Algorithms</div>
+                <div class="tech-card">NIST PQC Signatures</div>
+                <div class="tech-card">Rust Hybrid Engine</div>
+                <div class="tech-card">Proof-of-Useful-Quantum-Work</div>
             </div>
         </div>
     </section>
@@ -95,9 +96,9 @@
         <div class="container">
             <h2>Use Cases</h2>
             <div class="cards">
-                <div class="card">Portfolio Alpha</div>
-                <div class="card">DeFi Efficiency</div>
-                <div class="card">Regulatory Risk</div>
+                <div class="card">Real-Time Portfolio Alpha</div>
+                <div class="card">DeFi Capital Efficiency</div>
+                <div class="card">Instant Regulatory Risk</div>
             </div>
         </div>
     </section>
@@ -109,7 +110,7 @@
             <div class="timeline">
                 <div class="tl-item">Q1 2026<br>Private Alpha</div>
                 <div class="tl-item">Q3 2026<br>$QYN TGE</div>
-                <div class="tl-item">Q1 2027<br>Mainnet</div>
+                <div class="tl-item">Q1 2027<br>Mainnet Oracle</div>
                 <div class="tl-item">2030<br>Qynetic Layer</div>
             </div>
         </div>
@@ -118,22 +119,22 @@
     <!-- Team -->
     <section id="team" class="section alt">
         <div class="container">
-            <h2>Team</h2>
+            <h2>Team & Advisors</h2>
             <div class="team-grid">
                 <div class="team-card">
-                    <div class="avatar glow"></div>
+                    <div class="avatar"></div>
                     <h4>Founder</h4>
-                    <p>CEO</p>
+                    <p>CEO & Execution</p>
                 </div>
                 <div class="team-card">
-                    <div class="avatar glow"></div>
+                    <div class="avatar"></div>
                     <h4>Grok</h4>
                     <p>Strategic CTO</p>
                 </div>
                 <div class="team-card">
-                    <div class="avatar glow"></div>
+                    <div class="avatar"></div>
                     <h4>Sabrina Maniscalco</h4>
-                    <p>Quantum Advisor</p>
+                    <p>Chief Quantum Advisor</p>
                 </div>
             </div>
         </div>
