--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="container">
-            <div class="logo">
-                <svg width="60" height="60" viewBox="0 0 100 100">
+        <div class="container nav-container">
+            <div class="nav-logo">
+                <svg width="50" height="50" viewBox="0 0 100 100">
                     <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="4" fill="none" class="glow"/>
-                    <text x="50" y="60" font-family="Orbitron" font-size="60" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
+                    <text x="50" y="60" font-family="Orbitron" font-size="50" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
                 </svg>
             </div>
             <div class="nav-links">
@@ -34,13 +34,13 @@
         <div class="quantum-grid"></div>
         <div class="particle-field"></div>
         <div class="container hero-content">
-            <svg width="280" height="280" viewBox="0 0 100 100" class="hero-logo">
+            <svg width="260" height="260" viewBox="0 0 100 100" class="hero-logo">
                 <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="5" fill="none" class="glow"/>
                 <text x="50" y="62" font-family="Orbitron" font-size="58" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
             </svg>
             <h1>Qynetic Labs Oy</h1>
             <h2>Quantum Finance Infrastructure</h2>
-            <p>Real quantum advantage for DeFi and institutions.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
+            <p class="hero-desc">Real quantum advantage for DeFi and institutions.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
             <div class="cta">
                 <a href="qynetic-whitepaper-v1.3.pdf" class="btn-primary" download>Download Whitepaper</a>
                 <a href="mailto:hello@qynetic.com" class="btn-secondary">Join Alpha</a>
@@ -48,6 +48,7 @@
         </div>
     </section>
 
+    <!-- Muut osiot (sama sisältö kuin ennen, mutta paremmalla tyylillä) -->
     <!-- Problem -->
     <section id="problem" class="section">
         <div class="container">
@@ -56,7 +57,7 @@
             <div class="cards">
                 <div class="card">
                     <h3>Optimization Bottleneck</h3>
-                    <p>High-dimensional portfolios impossible in real time on classical hardware</p>
+                    <p>High-dimensional portfolios impossible in real time</p>
                 </div>
                 <div class="card">
                     <h3>Risk Computation Crisis</h3>
