--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation - siisti ja minimalistinen -->
     <nav class="navbar">
         <div class="container nav-container">
-            <div class="nav-logo">
-                <svg width="50" height="50" viewBox="0 0 100 100">
-                    <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="4" fill="none" class="glow"/>
-                    <text x="50" y="60" font-family="Orbitron" font-size="50" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
-                </svg>
-            </div>
+            <div class="brand">Qynetic Labs Oy</div>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#problem">Problem</a>
@@ -29,15 +24,11 @@
         </div>
     </nav>
 
-    <!-- Hero -->
+    <!-- Hero - puhdas, iso teksti erottuu -->
     <section id="home" class="hero">
         <div class="quantum-grid"></div>
         <div class="particle-field"></div>
         <div class="container hero-content">
-            <svg width="260" height="260" viewBox="0 0 100 100" class="hero-logo">
-                <circle cx="50" cy="50" r="45" stroke="#00FFFF" stroke-width="5" fill="none" class="glow"/>
-                <text x="50" y="62" font-family="Orbitron" font-size="58" text-anchor="middle" fill="#00FFFF" class="glow-text">QYN</text>
-            </svg>
             <h1>Qynetic Labs Oy</h1>
             <h2>Quantum Finance Infrastructure</h2>
             <p class="hero-desc">Real quantum advantage for DeFi and institutions.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
@@ -48,7 +39,7 @@
         </div>
     </section>
 
-    <!-- Muut osiot (sama sisältö kuin ennen, mutta paremmalla tyylillä) -->
+    <!-- Loput osiot (sama sisältö, parempi responsive) -->
     <!-- Problem -->
     <section id="problem" class="section">
         <div class="container">
