--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qynetic Labs Oy | Quantum Finance</title>
+    <title>Qynetic Labs Oy | Quantum Finance Infrastructure</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation - siisti ja minimalistinen -->
+    <!-- Navigation - kaunis ja minimalistinen -->
     <nav class="navbar">
         <div class="container nav-container">
             <div class="brand">Qynetic Labs Oy</div>
@@ -24,14 +24,14 @@
         </div>
     </nav>
 
-    <!-- Hero - puhdas, iso teksti erottuu -->
+    <!-- Hero - puhdas ja voimakas -->
     <section id="home" class="hero">
         <div class="quantum-grid"></div>
         <div class="particle-field"></div>
         <div class="container hero-content">
             <h1>Qynetic Labs Oy</h1>
             <h2>Quantum Finance Infrastructure</h2>
-            <p class="hero-desc">Real quantum advantage for DeFi and institutions.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
+            <p class="hero-desc">We build neutral quantum-augmented infrastructure that turns raw quantum advantage into measurable financial alpha.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
             <div class="cta">
                 <a href="qynetic-whitepaper-v1.3.pdf" class="btn-primary" download>Download Whitepaper</a>
                 <a href="mailto:hello@qynetic.com" class="btn-secondary">Join Alpha</a>
@@ -39,16 +39,15 @@
         </div>
     </section>
 
-    <!-- Loput osiot (sama sisältö, parempi responsive) -->
     <!-- Problem -->
     <section id="problem" class="section">
         <div class="container">
             <h2>The Classical Limit</h2>
-            <p class="section-desc">Current systems cannot handle the scale of 2027–2030 finance markets.</p>
+            <p class="section-desc">Current systems cannot handle the scale and complexity of finance markets in the 2027–2030 era.</p>
             <div class="cards">
                 <div class="card">
                     <h3>Optimization Bottleneck</h3>
-                    <p>High-dimensional portfolios impossible in real time</p>
+                    <p>High-dimensional portfolios impossible in real time on classical hardware</p>
                 </div>
                 <div class="card">
                     <h3>Risk Computation Crisis</h3>
