--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Qynetic Labs Oy - Quantum-augmented financial infrastructure">
     <title>Qynetic Labs Oy | Quantum Finance Infrastructure</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation - kaunis ja minimalistinen -->
+    <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
             <div class="brand">Qynetic Labs Oy</div>
@@ -24,14 +25,15 @@
         </div>
     </nav>
 
-    <!-- Hero - puhdas ja voimakas -->
+    <!-- Hero -->
     <section id="home" class="hero">
         <div class="quantum-grid"></div>
         <div class="particle-field"></div>
         <div class="container hero-content">
             <h1>Qynetic Labs Oy</h1>
-            <h2>Quantum Finance Infrastructure</h2>
-            <p class="hero-desc">We build neutral quantum-augmented infrastructure that turns raw quantum advantage into measurable financial alpha.<br>Private alpha Q1 2026 • Mainnet Q1 2027</p>
+            <h2>The Bloomberg Terminal of the Quantum Era</h2>
+            <p class="hero-desc">We build neutral, open-source quantum-augmented infrastructure that turns raw quantum advantage into measurable alpha for DeFi and institutions.</p>
+            <p class="hero-sub">Private alpha Q1 2026 • Mainnet Q1 2027</p>
             <div class="cta">
                 <a href="qynetic-whitepaper-v1.3.pdf" class="btn-primary" download>Download Whitepaper</a>
                 <a href="mailto:hello@qynetic.com" class="btn-secondary">Join Alpha</a>
@@ -43,19 +45,22 @@
     <section id="problem" class="section">
         <div class="container">
             <h2>The Classical Limit</h2>
-            <p class="section-desc">Current systems cannot handle the scale and complexity of finance markets in the 2027–2030 era.</p>
+            <p class="section-desc">By 2027–2030, classical systems will fail to handle the complexity of modern financial markets at scale.</p>
             <div class="cards">
                 <div class="card">
-                    <h3>Optimization Bottleneck</h3>
-                    <p>High-dimensional portfolios impossible in real time on classical hardware</p>
+                    <div class="card-icon">📊</div>
+                    <h3>Portfolio Optimization</h3>
+                    <p>1 000+ assets in real time → hours on classical hardware</p>
                 </div>
                 <div class="card">
-                    <h3>Risk Computation Crisis</h3>
-                    <p>Regulatory Monte-Carlo too slow at scale</p>
+                    <div class="card-icon">⚠️</div>
+                    <h3>Risk & Stress Testing</h3>
+                    <p>10¹⁰ Monte-Carlo paths → days or impossible</p>
                 </div>
                 <div class="card">
-                    <h3>Capital Inefficiency</h3>
-                    <p>Suboptimal routing wastes billions annually</p>
+                    <div class="card-icon">🔗</div>
+                    <h3>Collateral & Execution</h3>
+                    <p>Heuristics leave 8–18% capital inefficient</p>
                 </div>
             </div>
         </div>
@@ -65,7 +70,7 @@
     <section id="solution" class="section alt">
         <div class="container">
             <h2>Qynetic Oracle</h2>
-            <p class="large">Production quantum financial layer on real hardware.<br>IBM Condor • Google Willow • Post-Quantum Secured from day one</p>
+            <p class="large">The world's first production quantum-accelerated financial data feed.<br>Running on real hardware: IBM Condor • Google Willow • AWS Braket<br>Post-quantum cryptography from day one.</p>
         </div>
     </section>
 
@@ -74,10 +79,22 @@
         <div class="container">
             <h2>Core Technology</h2>
             <div class="tech-grid">
-                <div class="tech-card">QAOA & QAE Algorithms</div>
-                <div class="tech-card">NIST PQC Signatures</div>
-                <div class="tech-card">Rust Hybrid Engine</div>
-                <div class="tech-card">Proof-of-Useful-Quantum-Work</div>
+                <div class="tech-card">
+                    <h3>QAOA & QAE</h3>
+                    <p>Quantum algorithms for optimization and risk</p>
+                </div>
+                <div class="tech-card">
+                    <h3>NIST PQC</h3>
+                    <p>Kyber + Dilithium + Falcon signatures</p>
+                </div>
+                <div class="tech-card">
+                    <h3>Rust Backbone</h3>
+                    <p>High-performance hybrid engine</p>
+                </div>
+                <div class="tech-card">
+                    <h3>Proof-of-Useful-Quantum</h3>
+                    <p>Future consensus mechanism (2028+)</p>
+                </div>
             </div>
         </div>
     </section>
@@ -87,9 +104,18 @@
         <div class="container">
             <h2>Use Cases</h2>
             <div class="cards">
-                <div class="card">Real-Time Portfolio Alpha</div>
-                <div class="card">DeFi Capital Efficiency</div>
-                <div class="card">Instant Regulatory Risk</div>
+                <div class="card">
+                    <h3>Real-Time Portfolio Alpha</h3>
+                    <p>Superior risk-adjusted returns for hedge funds and protocols</p>
+                </div>
+                <div class="card">
+                    <h3>DeFi Capital Efficiency</h3>
+                    <p>Optimal cross-chain collateral routing</p>
+                </div>
+                <div class="card">
+                    <h3>Regulatory Compliance</h3>
+                    <p>Instant quantum Monte-Carlo for Basel IV</p>
+                </div>
             </div>
         </div>
     </section>
@@ -99,10 +125,26 @@
         <div class="container">
             <h2>Roadmap</h2>
             <div class="timeline">
-                <div class="tl-item">Q1 2026<br>Private Alpha</div>
-                <div class="tl-item">Q3 2026<br>$QYN TGE</div>
-                <div class="tl-item">Q1 2027<br>Mainnet Oracle</div>
-                <div class="tl-item">2030<br>Qynetic Layer</div>
+                <div class="tl-item">
+                    <span class="tl-date">Dec 2025</span>
+                    <p>Incorporation</p>
+                </div>
+                <div class="tl-item">
+                    <span class="tl-date">Q1 2026</span>
+                    <p>Private Alpha</p>
+                </div>
+                <div class="tl-item">
+                    <span class="tl-date">Q3 2026</span>
+                    <p>$QYN TGE</p>
+                </div>
+                <div class="tl-item">
+                    <span class="tl-date">Q1 2027</span>
+                    <p>Mainnet Oracle</p>
+                </div>
+                <div class="tl-item">
+                    <span class="tl-date">2030</span>
+                    <p>Qynetic Layer</p>
+                </div>
             </div>
         </div>
     </section>
@@ -114,18 +156,23 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="avatar"></div>
-                    <h4>Founder</h4>
+                    <h4>Anonymous Finnish Founder</h4>
                     <p>CEO & Execution</p>
                 </div>
                 <div class="team-card">
                     <div class="avatar"></div>
-                    <h4>Grok</h4>
+                    <h4>Grok (xAI)</h4>
                     <p>Strategic CTO</p>
                 </div>
                 <div class="team-card">
                     <div class="avatar"></div>
-                    <h4>Sabrina Maniscalco</h4>
+                    <h4>Prof. Sabrina Maniscalco</h4>
                     <p>Chief Quantum Advisor</p>
+                </div>
+                <div class="team-card">
+                    <div class="avatar"></div>
+                    <h4>Dr. Ilkka Tittonen</h4>
+                    <p>Quantum Systems Advisor</p>
                 </div>
             </div>
         </div>
@@ -134,8 +181,12 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>© 2025 Qynetic Labs Oy • Helsinki, Finland</p>
-            <p>Quantum computing is here. We are shipping it.</p>
+            <p class="footer-title">Ready to ship code, qubits, and alpha.<br>Not stories.</p>
+            <div class="footer-links">
+                <a href="qynetic-whitepaper-v1.3.pdf" download>Whitepaper</a>
+                <a href="mailto:hello@qynetic.com">Contact</a>
+            </div>
+            <p class="small">© 2025 Qynetic Labs Oy • Helsinki, Finland</p>
         </div>
     </footer>
 </body>
