--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Qynetic Labs Oy - Quantum-augmented financial infrastructure">
     <title>Qynetic Labs Oy | Quantum Finance Infrastructure</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation - läpinäkyvämpi, matalampi -->
     <nav class="navbar">
         <div class="container nav-container">
             <div class="brand">Qynetic Labs Oy</div>
@@ -25,7 +24,7 @@
         </div>
     </nav>
 
-    <!-- Hero -->
+    <!-- Hero - enemmän paddingia, otsikko näkyy kokonaan -->
     <section id="home" class="hero">
         <div class="quantum-grid"></div>
         <div class="particle-field"></div>
@@ -41,6 +40,7 @@
         </div>
     </section>
 
+    <!-- Loput osiot (sama sisältö kuin v6:ssa) -->
     <!-- Problem -->
     <section id="problem" class="section">
         <div class="container">
